[tool.poetry]
name = "ioclib"
version = "3.0"
description = ""
authors = ["Alexander Martynov <triplustri@mail.ru>"]
readme = "README.md"
packages = [
    {include = "ioclib"}
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7"
